# nm_ksr_lab

./: CMakeLists.txt  docs.md
src/core/include/: nmlib.hpp
src/core/src/: methods.cc  nmlib.cc
src/gui/: CMakeLists.txt
src/gui/src/: helpform.cc  helpform.ui  image.png~  mainwindow.cc  mainwindow.h  mainwindow.ui
